# slurm20_11

./: .gitignore  Makefile.in  NEWS  RELEASE_NOTES  aclocal.m4  configure
auxdir/: Makefile.in  x_ac_debug.m4
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/nss_slurm/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/pmi/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in  network.shtml
doc/man/: Makefile.in
etc/: Makefile.in  slurmrestd.service
src/: Makefile.in
src/api/: Makefile.in  node_info.c
src/bcast/: Makefile.in
src/common/: Makefile.in  log.c  slurm_protocol_defs.c
src/database/: Makefile.in
src/lua/: Makefile.in
src/mybatch/: Makefile.am  Makefile.in  mybatch.c  opt.h
src/mytrigger/: Makefile.am  Makefile.in  mytrigger.c  mytrigger.h  opts.c
src/plugins/: Makefile.in
src/sacct/: Makefile.in  print.c  sacct.c
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/scrontab/: Makefile.in  default_crontab.bino  scrontab  scrontab.c  usage.bino  usage.txt
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in  opts.c  sinfo.c
testsuite/: Makefile.in
(+210 files in other folders)
